--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "bytes": "^3.1.2",
     "magic-bytes.js": "^1.10.0",
     "mime-types": "^2.1.35",
     "reflect-metadata": "^0.2.0",
@@ -32,6 +33,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bytes": "^3.1.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/mime-types": "^2.1.4",
